# ftree

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: fs_utils.rs  main.rs
src/tree/: mod.rs
