[package]
version = "1.1.0"
name = "e2o-ftree"
description = "A file tree printing command line tool"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["tree", "file", "system", "structure"]
authors = ["eum2o <msc-gh.eum2o@aleeas.com>"]
repository = "https://github.com/eum2o/ftree"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
readme = "README.md"
exclude = ["output/"]

[[bin]]
name = "ftree"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.13.0"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
gitignore = "1.0.8"
